# django-folksonomy

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: tox.yml
demo/: admin.py  apps.py  models.py  settings.py
demo/migrations/: 0001_initial.py
folksonomy/: admin.py  apps.py  models.py
folksonomy/migrations/: 0001_initial.py
tests/: settings.py  test_my_app.py
